<resources>
    <string name="app_name">Swachh Sankalp</string>

    <!-- String values for Menu Bar -->
    <string name="Homepage_menu">Homepage</string>
    <string name="Administrator_menu">Administrator</string>
    <string name="Cleaners_Portal">Cleaner\'s Portal</string>
    <string name="Public_grievances">Public Grievance</string>
    <string name="Press_Release">Press Releases</string>
    <string name="placement_menu">Placement</string>
    <string name="contactUs_menu">Contact Us</string>
    <string name="for_student_menu">For Students</string>
    <string name="student_login_menu">Login</string>
    <string name="erp_login_menu">ERP Login</string>
    <string name="for_professor_menu">For Professors</string>
    <string name="professor_login_menu">Login</string>
    <string name="webmail_login_menu">WebMail Login</string>
    <string name="for_communicate_menu">Communicate</string>
    <string name="about_menu">About</string>
    <string name="share_menu">Share</string>
    <string name="any_suggestion_menu">Any Suggestion?</string>


    <!-- Login and Register Firebase-->
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Let me login</string>
    <string name="btn_sign_out">Logout</string>


    <!-- String for drawer open and close -->
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>
    <string name="text2">Loading please wait..........</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


</resources>
